# med-project

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
med_project/: dataset.py
notebooks/: 01-jarzeckil-expl-an.ipynb  01_eda.ipynb  01_jarzecki_eda.ipynb  01_pskier_eda.ipynb  02_modeling.ipynb
reports/: eda_report.ipynb  variables_description.md
src/med_project/: config.py  dataset.py  plots.py  preprocess.py
